--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
-#root {
+@import url("https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap");
+
+body,
+html,
+input {
+  font-family: "Sunflower", sans-serif;
+  line-height: 1.5;
+  font-weight: 500;
+  font-style: normal;
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +50,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
