--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Sunflower:wght@300;500;700&display=swap");
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 500;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #cf9fff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,6 +20,15 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+body,
+html,
+input {
+  font-family: "Sunflower", sans-serif;
+  line-height: 1.5;
+  font-weight: 500;
+  font-style: normal;
 }
 
 body {
