--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ button {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
